--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,16 @@
 
 <header>
   <div id="logo">
+    <a href="#"><h1>LOGO</h1></a>
   </div>
 
   <nav>
     <ul>
       <li><a href="">Sobre</a></li>
-      <li><a href="{% url 'members:index' %}">Membros</a></li>
-      <li><a href="">Linhas de pesquisa</a></li>
-      <li><a href="">Publicações</a></li>
+      <li><a href="{% url 'members_index' %}">Membros</a></li>
+      <li><a href="{% url 'research_lines_index' %}">Linhas de pesquisa</a></li>
+      <li><a href="{% url 'publications_index' %}">Publicações</a></li>
+      <li><a href="">Projetos</a></li>
       <li><a href="">Contato</a></li>
     </ul>
   </nav>
