Adicionada view de projetos

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
       <li><a href="{% url 'members_index' %}">Membros</a></li>
       <li><a href="{% url 'research_lines_index' %}">Linhas de pesquisa</a></li>
       <li><a href="{% url 'publications_index' %}">Publicações</a></li>
-      <li><a href="">Projetos</a></li>
-      <li><a href="">Contato</a></li>
+      <li><a href="{% url 'projects_index' %}">Projetos</a></li>
+      {# <li><a href="">Contato</a></li>#}
     </ul>
   </nav>
 </header>
