--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,13 @@
 
+{% load static %}
 <!DOCTYPE HTML>
 <html>
 <head>
 <meta charset="utf-8">
 <title>{% block title %}{% endblock %}</title>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static "css/base.css" %}" />
+
 </head>
 
 <body>
@@ -15,7 +19,7 @@
 
   <nav>
     <ul>
-      <li><a href="">Sobre</a></li>
+      <li><a href="{% url 'home_index' %}">Sobre</a></li>
       <li><a href="{% url 'members_index' %}">Membros</a></li>
       <li><a href="{% url 'research_lines_index' %}">Linhas de pesquisa</a></li>
       <li><a href="{% url 'publications_index' %}">Publicações</a></li>
