--- a/sitestatic/css/base.css
+++ b/sitestatic/css/base.css
@@ -5,3 +5,56 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+html, body {
+  height: 100%;
+  font-family: 'Trebuchet MS', Verdana, Tahoma, Arial, sans-serif;
+}
+
+#border {
+  height: 1.5%;
+  width: 100%;
+  background-color: rgb(43, 128, 170);
+}
+
+header {
+  display: flex;
+  background-color: rgb(246, 247, 205);
+  padding: 2%;
+}
+
+header #logo {
+  width: 25%;
+}
+
+header #logo a {
+  color: green;
+}
+
+header nav {
+  width: 100%;
+}
+
+header nav ul {
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+  margin-top: 3%;
+}
+
+header nav ul li {
+  margin-left: 5%;
+}
+
+header a {
+  font-size: 1.25em;
+  font-weight: bold;
+  text-decoration: none;
+  color: rgb(77, 77, 77);
+  transition: 0.3s;
+}
+
+header a:hover {
+  color: rgb(43, 128, 170);
+  cursor: pointer;
+}
