--- a/sitestatic/css/base.css
+++ b/sitestatic/css/base.css
@@ -20,11 +20,15 @@ html, body {
 header {
   display: flex;
   background-color: rgb(246, 247, 205);
-  padding: 2%;
+  padding: 1.5%;
 }
 
 header #logo {
   width: 25%;
+}
+
+header #logo img {
+  width: 100%;
 }
 
 header #logo a {
@@ -57,4 +61,9 @@ header a {
 header a:hover {
   color: rgb(43, 128, 170);
   cursor: pointer;
+}
+
+#content h2 {
+  font-size: 2.3em;
+  text-align: center;
 }
