Template da pagina home adaptado para funcionar com inclusion_tags()

--- a/sitestatic/css/members.css
+++ b/sitestatic/css/members.css
@@ -29,6 +29,10 @@ section#members {
   text-decoration: none;
 }
 
+.member a:hover {
+  text-decoration: underline;
+}
+
 .member p {
   font-size: 0.8em;
 }
