--- a/researches/templates/researches/publications.html
+++ b/researches/templates/researches/publications.html
@@ -3,13 +3,24 @@
 {% block title %}Publicações{% endblock %}
 
 {% block content %}
+
+<section id="publications">
+
 <h2>Publicações</h2>
 
+<div id="publications-list">
+
   {% for publication in publications %}
-    <h4>{{ publication.title }}</h4>
-    <p>publicado em: {{ publication.publication_local }}</p>
-    <p>Link: <a href="#">{{ publication.publication_url }}</a></p>
-    <p><a href="#">Download</a></p>
+    <div class="publication">
+      <h4>{{ publication.title }}</h4>
+      <p>publicado em: {{ publication.publication_local }}</p>
+      <p>Link: <a href="#">{{ publication.publication_url }}</a></p>
+      <p><a href="#">Download</a></p>
+    </div>
   {% endfor %}
+
+</div>
+
+</section>
 
 {% endblock %}
