--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
 <title>{% block title %}{% endblock %}</title>
 <link rel="stylesheet" type="text/css" href="{% static "css/base.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/members.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "css/research_lines.css" %}" />
 <link rel="stylesheet" type="text/css" href="{% static "css/publications.css" %}" />
+
 
 </head>
 
