--- a/members/templates/members/home.html
+++ b/members/templates/members/home.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
-{% load home_tags %}
+{% load members_tags %}
+{% load researches_tags %}
 
 {% block title %}Início{% endblock %}
 
 {% block content %}
 
+  {% show_research_lines %}
   {% show_members %}
 
 {% endblock %}
