Finalizado localizacao e inserido secao na home para publicacoes

--- a/members/templates/members/home.html
+++ b/members/templates/members/home.html
@@ -10,4 +10,8 @@
   {% show_research_lines %}
   {% show_members %}
 
+  {% include "researches/publications_home.html" %}
+
+  {% show_location %}
+
 {% endblock %}
