--- a/sitestatic/css/members.css
+++ b/sitestatic/css/members.css
@@ -3,7 +3,7 @@
 section#members {
   background: rgb(43, 128, 170);
   color: rgb(255, 255, 255);
-  padding: 2%;
+  padding: 4% 2%;
 }
 
 #members-list {
