--- a/sitestatic/css/research_lines.css
+++ b/sitestatic/css/research_lines.css
@@ -1,7 +1,7 @@
 section#research_lines {
   background: rgb(180, 145, 39);
   color: rgb(255, 255, 255);
-  padding: 2%;
+  padding: 4% 2%;
 }
 
 #research-lines-list {
