--- a/members/templates/members/about.html
+++ b/members/templates/members/about.html
@@ -1,5 +1,7 @@
 <section id="about">
 
+  {% if about %}
+
   <div id="lab-info">
 
     <div id="lab-info-text">
@@ -12,5 +14,7 @@
     </div>
 
   </div>
+
+  {% endif %}
 
 </section>
