--- a/sitestatic/css/about.css
+++ b/sitestatic/css/about.css
@@ -3,7 +3,7 @@
 section#about {
   background: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
-  padding: 2%;
+  padding: 4% 2%;
 }
 
 section#about h1 {
