--- a/sitestatic/css/location.css
+++ b/sitestatic/css/location.css
@@ -2,7 +2,7 @@
 
 section#location {
   background: rgb(0, 0, 0);
-  padding: 2%;
+  padding: 4% 2%;
   color: rgb(255, 255, 255);
   height: 100%;
 }
